[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "noneapi"
version = "0.1.7"
description = "Micro RPC framework based on ZeroMQ for building distributed systems"
readme = "README.md"
authors = [{ name = "Denys Rozlomii", email = "eighty.eighth.inc@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyzmq==26.2.0",
    "loguru==0.7.2",
    "gevent==24.10.1",
    "pdoc==14.7.0",
    "pydantic==2.9.2",
    "orjson==3.10.7"
]
optional-dependencies = { dev = ["pytest", "flake8", "black", "mypy", "isort", "pytest-cov", "requests"] }

[project.urls]
repository = "https://github.com/EightyEighth/noneapi"
